<resources>
    <string name="app_name">Food Facts App</string>
    <string name="title_how_to_use">Bagaimana cara menggunakannya?</string>
    <string name="title_history">History</string>
    <string name="title_team">Vliegen</string>
    <string name="title_detail">Detail</string>

    <string name="label_sub_app_name">Mengetahui apa yang kamu makan</string>
    <string name="label_food">Food</string>
    <string name="label_total_calories">Total Kalori</string>
    <string name="label_food_material">Bahan Makanan</string>
    <string name="label_feature">Label</string>

    <string name="text_click_camera_button">1. Klik tombol kamera</string>
    <string name="text_take_picture">2. Ambil gambar makanan kamu</string>
    <string name="text_wait_for_a_moment">3. Tunggu beberapa saat</string>
    <string name="text_foodstuff_appears">4. Bahan makanan dari foto tersebut akan muncul beserta total kalorinya</string>

    <string name="button_photo_again">Foto Lagi</string>
    <string name="button_menu">Menu</string>
    <string name="title_foodfact">FoodFact!</string>

    <string name="label_choose_menu">Pilih Menu</string>
    <string name="label_choose_item_for_send_image">Pilih item untuk mengirim gambar</string>
</resources>