<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/color_dark_grey"
    android:orientation="vertical"
    android:padding="@dimen/dimen_10dp">

    <TextView
        style="@style/FoodFactText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_how_to_use"
        android:textAlignment="center"
        android:textColor="@color/color_light_grey"
        android:textSize="@dimen/text_size_26sp" />

    <TextView
        style="@style/FoodFactText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_10dp"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:padding="@dimen/dimen_10dp"
        android:text="@string/text_click_camera_button"
        android:textColor="@color/color_light_grey"
        android:textSize="@dimen/text_size_16sp" />

    <TextView
        style="@style/FoodFactText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_10dp"
        android:padding="@dimen/dimen_10dp"
        android:text="@string/text_take_picture"
        android:textColor="@color/color_light_grey"
        android:textSize="@dimen/text_size_16sp" />

    <TextView
        style="@style/FoodFactText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_10dp"
        android:padding="@dimen/dimen_10dp"
        android:text="@string/text_wait_for_a_moment"
        android:textColor="@color/color_light_grey"
        android:textSize="@dimen/text_size_16sp" />

    <TextView
        style="@style/FoodFactText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_10dp"
        android:padding="@dimen/dimen_10dp"
        android:text="@string/text_foodstuff_appears"
        android:textColor="@color/color_light_grey"
        android:textSize="@dimen/text_size_16sp" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:background="@android:color/transparent"
        android:padding="@dimen/dimen_10dp"
        android:src="@drawable/ic_back" />

</LinearLayout>